// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildBatchUpdateSql > generates correct SQL for: 'JSONB fields (attachment)' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_name" = CASE WHEN v."__has_0" THEN v."col_name" ELSE t."col_name" END, "col_files" = CASE WHEN v."__has_1" THEN v."col_files" ELSE t."col_files" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_401', TRUE, 'Document 1', TRUE, '[{"id":"att_001","name":"file1.pdf"}]'::jsonb, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_402', TRUE, 'Document 2', TRUE, '[{"id":"att_002","name":"file2.pdf"}]'::jsonb, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_name", "__has_1", "col_files", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'NULL values' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_name" = CASE WHEN v."__has_0" THEN v."col_name" ELSE t."col_name" END, "col_count" = CASE WHEN v."__has_1" THEN v."col_count" ELSE t."col_count" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_501', TRUE, 'Alice', TRUE, NULL::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_502', TRUE, NULL, TRUE, 42::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_name", "__has_1", "col_count", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'date field' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_event" = CASE WHEN v."__has_0" THEN v."col_event" ELSE t."col_event" END, "col_date" = CASE WHEN v."__has_1" THEN v."col_date" ELSE t."col_date" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_601', TRUE, 'Meeting', TRUE, '2025-01-15T10:00:00.000Z'::timestamptz, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_602', TRUE, 'Conference', TRUE, '2025-02-20T14:30:00.000Z'::timestamptz, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_event", "__has_1", "col_date", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'large batch (5 records)' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_name" = CASE WHEN v."__has_0" THEN v."col_name" ELSE t."col_name" END, "col_value" = CASE WHEN v."__has_1" THEN v."col_value" ELSE t."col_value" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_900', TRUE, 'Record 1', TRUE, 10::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_901', TRUE, 'Record 2', TRUE, 20::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_902', TRUE, 'Record 3', TRUE, 30::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_903', TRUE, 'Record 4', TRUE, 40::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_904', TRUE, 'Record 5', TRUE, 50::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_name", "__has_1", "col_value", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'multiple text fields' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_first_name" = CASE WHEN v."__has_0" THEN v."col_first_name" ELSE t."col_first_name" END, "col_last_name" = CASE WHEN v."__has_1" THEN v."col_last_name" ELSE t."col_last_name" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_101', TRUE, 'John', TRUE, 'Doe', '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_102', TRUE, 'Jane', TRUE, 'Smith', '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_first_name", "__has_1", "col_last_name", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'multipleSelect field (JSONB)' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_item" = CASE WHEN v."__has_0" THEN v."col_item" ELSE t."col_item" END, "col_tags" = CASE WHEN v."__has_1" THEN v."col_tags" ELSE t."col_tags" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_701', TRUE, 'Product A', TRUE, '["tag1","tag2","tag3"]'::jsonb, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_702', TRUE, 'Product B', TRUE, '["tag2","tag4"]'::jsonb, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_item", "__has_1", "col_tags", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'number and checkbox fields' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_score" = CASE WHEN v."__has_0" THEN v."col_score" ELSE t."col_score" END, "col_active" = CASE WHEN v."__has_1" THEN v."col_active" ELSE t."col_active" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_301', TRUE, 95.5::double precision, TRUE, true::boolean, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_302', TRUE, 82.3::double precision, TRUE, false::boolean, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_score", "__has_1", "col_active", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'single record update' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_name" = CASE WHEN v."__has_0" THEN v."col_name" ELSE t."col_name" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_801', TRUE, 'Only One', '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_name", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'single text field' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_name" = CASE WHEN v."__has_0" THEN v."col_name" ELSE t."col_name" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_001', TRUE, 'Alice', '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_002', TRUE, 'Bob', '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_name", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;

exports[`buildBatchUpdateSql > generates correct SQL for: 'sparse updates (different fields per …' 1`] = `
"UPDATE "bseaaaaaaaaaaaaaaaa"."tblbbbbbbbbbbbbbbbb" AS t
SET "col_name" = CASE WHEN v."__has_0" THEN v."col_name" ELSE t."col_name" END, "col_age" = CASE WHEN v."__has_1" THEN v."col_age" ELSE t."col_age" END, "__last_modified_time" = v."__last_modified_time", "__last_modified_by" = v."__last_modified_by", "__version" = t."__version" + 1
FROM (VALUES
  ('rec_201', TRUE, 'Alice', FALSE, NULL::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test'),
  ('rec_202', FALSE, NULL, TRUE, 30::double precision, '2025-01-17T00:00:00.000Z'::timestamptz, 'usr_test')
) AS v("__id", "__has_0", "col_name", "__has_1", "col_age", "__last_modified_time", "__last_modified_by")
WHERE t.__id = v.__id
RETURNING t.__id AS record_id, t.__version AS new_version"
`;
